@@ -1,0 +1,92 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+	<title>2bth for no deposit req</title>
+	<meta name="robots" content="NOARCHIVE,NOFOLLOW">
+	<link rel="stylesheet" title="craigslist" href="http://www.craigslist.org/styles/craigslist.css" type="text/css" media="all">
+</head>
+
+ <body onload="initFlag(1207457727)" class="posting">
+
+<div class="bchead">
+<a id="ef" href="/email.friend?postingID=1207457727">email this posting to a friend</a>
+<a href="http://miami.craigslist.org">south florida craigslist</a>
+        &gt; <a href="/brw/">broward county</a> &gt;  <a href="/brw/apa/">apts/housing for rent</a>
+</div>
+
+	<div id="flags">
+		<div id="flagMsg">
+			please <a href="http://www.craigslist.org/about/help/flags_and_community_moderation">flag</a> with care:
+		</div>
+		<div id="flagChooser">
+			<br>
+			<a class="fl" id="flag16" href="/flag/?flagCode=16&amp;postingID=1207457727"
+				title="Wrong category, wrong site, discusses another post, or otherwise misplaced">
+				miscategorized</a>
+			<br>
+
+			<a class="fl" id="flag28" href="/flag/?flagCode=28&amp;postingID=1207457727"
+				title="Violates craigslist Terms Of Use or other posted guidelines">
+				prohibited</a>
+			<br>
+
+			<a class="fl" id="flag15" href="/flag/?flagCode=15&amp;postingID=1207457727"
+				title="Posted too frequently, in multiple cities/categories, or is too commercial">
+				spam/overpost</a>
+			<br>
+
+			<a class="fl" id="flag9" href="/flag/?flagCode=9&amp;postingID=1207457727"
+				title="Should be considered for inclusion in the Best-Of-Craigslist">
+				best of craigslist</a>
+			<br>
+		</div>
+	</div>
+
+<div id="tsb">
+		<a href="http://www.craigslist.org/about/FHA.html">Stating a discriminatory preference in a housing post is illegal - please flag discriminatory posts as prohibited</a></div> <div id="tsb"> <em>Avoid scams and fraud by dealing locally!</em> Beware any arrangement involving Western Union, Moneygram, wire transfer, or a landlord/owner who is out of the country or cannot meet you in person. <a href="http://www.craigslist.org/about/scams.html">More info</a></div>
+
+
+<h2>$1350 / 3br - 2bth for no deposit req (Coral Springs)</h2>
+<hr>
+Reply to: <a href="mailto:hous-ccpap-1207457727@craigslist.org?subject=%241350%20%2F%203br%20-%202bth%20for%20no%20deposit%20req%20(Coral%20Springs)">hous-ccpap-1207457727@craigslist.org</a> <sup>[<a href="http://www.craigslist.org/about/help/replying_to_posts" target="_blank">Errors when replying to ads?</a>]</sup><br>
+Date: 2009-06-05,  6:56PM EDT<br>
+<br>
+<br>
+<div id="userbody">
+<p><br>Call!! asking for a new owner.<br>  no deposit required rent to own properties. <br> <br> Defaulting payment records are not a problem, <br> we will help you protect the previous owners credit history! 2&#48;&#50;-56&#55;-637&#49;  <br><br></p>
+
+
+<br><br><ul>
+<li>cats are OK - purrr
+<li>dogs are OK - wooof
+<li> Location: Coral Springs
+<li>it's NOT ok to contact this poster with services or other commercial interests</ul>
+
+		<table summary="craigslist hosted images">
+			<tr>
+				<td align="center"><img src="http://images.craigslist.org/3k43pe3o8ZZZZZZZZZ9655022102a3ea51624.jpg" alt="image 1207457727-0"></td>
+				<td align="center"><img src="http://images.craigslist.org/3n13m53p6ZZZZZZZZZ96596515e51237a179c.jpg" alt="image 1207457727-1"></td>
+			</tr>
+			<tr>
+				<td align="center"><img src="http://images.craigslist.org/3od3p33leZZZZZZZZZ9656d614da8e3a51dd9.jpg" alt="image 1207457727-2"></td>
+				<td align="center"><img src="http://images.craigslist.org/3pb3oa3leZZZZZZZZZ965eb60e4d2344019fb.jpg" alt="image 1207457727-3"></td>
+			</tr>
+		</table>
+
+</div>
+PostingID: 1207457727<br>
+
+<br>
+
+<hr>
+<ul class="clfooter">
+	<li>Copyright &copy; 2009 craigslist, inc.</li>
+	<li><a href="http://www.craigslist.org/about/terms.of.use.html">terms of use</a></li>
+	<li><a href="http://www.craigslist.org/about/privacy_policy">privacy policy</a></li>
+	<li><a href="/forums/?forumID=8">feedback forum</a></li>
+</ul>
+<script type="text/javascript" src="http://www.craigslist.org/js/jquery.js"></script>
+<script type="text/javascript" src="http://www.craigslist.org/js/postings.js"></script>
+</body>
+</html>
+
