@@ -2,6 +2,9 @@
 
 === Release 0.6.1 (May 26, 2009)
 - Added PostFull::deleted_by_author? , added test case for said condition
+- Fixed a bug that caused the library to die in weird ways if there wasn't a title tag on a parsed page
+- Apparently Craigslist starting gzip-encoding *some* listings. Added gzip decoding support
+- Found a bug when parsing the location field on some full_posts in the apa sections
 
 === Release 0.6.0 (May 21, 2009)
 - Added PostFull::flagged_for_removal?
